--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -4,9 +4,9 @@
 
 @font-face {
   font-family: "Yesteryear";
-  src: url("./assets/fonts/Yesteryear-Regular.ttf") format("truetype");
+  src: url("../assets/fonts/Yesteryear-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "Vasek-Italic";
-  src: url("./assets/fonts/Vasek-Italic.ttf") format("truetype");
+  src: url("../assets/fonts/Vasek-Italic.ttf") format("truetype");
 }
