--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -10,3 +10,30 @@
   font-family: "Vasek-Italic";
   src: url("../assets/fonts/Vasek-Italic.ttf") format("truetype");
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #EE1F80 #27272A;
+}
+*::-webkit-scrollbar {
+	width: 7px;
+	background-color: rgb(39 39 42);
+}
+*::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background-color: #27272A;
+}
+*::-webkit-scrollbar-track:hover,
+*::-webkit-scrollbar-track:active {
+  background-color: #27272A;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 7px;
+	background-color: #ee1f80;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #DC1D76;
+}
+*::-webkit-scrollbar-thumb:active {
+  background-color: #C41969;
+}
