--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -10,6 +10,10 @@
   font-family: "Vasek-Italic";
   src: url("../assets/fonts/Vasek-Italic.ttf") format("truetype");
 }
+@font-face {
+  font-family: "Roboto-regular";
+  src: url("../assets/fonts/Roboto-Regular.ttf") format("truetype");
+}
 
 * {
   scrollbar-width: thin;
