refactor: add font-display

--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -5,14 +5,17 @@
 @font-face {
   font-family: "Yesteryear";
   src: url("../assets/fonts/Yesteryear-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "Vasek-Italic";
   src: url("../assets/fonts/Vasek-Italic.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "Roboto-regular";
   src: url("../assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 
 * {
