--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -17,6 +17,11 @@
   src: url("../assets/fonts/Roboto-Regular.ttf") format("truetype");
   font-display: swap;
 }
+@font-face {
+  font-family: "Raleway-regular";
+  src: url("../assets/fonts/Raleway-Regular.ttf") format("truetype");
+  font-display: swap;
+}
 
 * {
   scrollbar-width: thin;
